# DocumentAssistant

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  load_config.py  main.py  mypy.ini  ollama_use.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-quality.yml
code_tests/: convert_photo_to_json.py  ollama_use.py
documentassistent/: __init__.py  exceptions.py  graph.py  pipeline.py
documentassistent/agents/: base_agent.py  classification_agent.py  invoice_agent.py  las.py  note_agent.py  result_agent.py  storage_agent.py
documentassistent/config/: __init__.py  settings.py
documentassistent/input_engineering/: input_reader.py
documentassistent/llm/: base_llm.py  chain_llm.py  llm_factory.py  ollama_llm.py  openai_llm.py
documentassistent/prompts/: categorisation.yaml  invoice_extraction.yaml  note_extraction.yaml  prompt_collection.py  prompt_loader.py  result_extraction.yaml
documentassistent/storage/: __init__.py  base_repository.py  database.py  models.py  repository.py
documentassistent/structure/: state.py
documentassistent/structure/pydantic_llm_calls/: classification_call.py  confidence.py  invoice_call.py  note_call.py  result_call.py
documentassistent/utils/: file_manager.py  langfuse_handler.py  logger.py
graphrag/: pyproject.toml
graphrag/input_engineering/: input_reader.py
graphrag/llm/: __init__.py  base_llm.py  chain_llm.py  llm_factory.py  ollama_llm.py  openai_llm.py
graphrag/structure/: llm_call_structure.py  state.py
graphrag/structure/pydantic_llm_calls/: classification_call.py  invoice_call.py
graphrag/utils/: logger.py
llm/: base_llm.py  chain_llm.py  llm_factory.py  ollama_llm.py  openai_llm.py
prompts/: __init__.py  prompt_collection.py
structure/: llm_call_structure.py  state.py
tests/: __init__.py  conftest.py
tests/integration/: test_document_workflow.py  test_llm_integration.py
tests/unit/: test_exceptions.py
tests/unit/agents/: test_classification_agent.py  test_invoice_agent.py
tests/unit/input_engineering/: test_input_reader.py
tests/unit/llm/: test_chain_llm.py  test_llm_factory.py  test_ollama_llm.py
tests/unit/prompts/: test_prompt_collection.py
tests/unit/structure/: test_pydantic_llm_calls.py  test_state.py
tests/unit/utils/: test_langfuse_handler.py  test_logger.py
utils/: logger.py
