[project]
name = "graphrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Hedda G",email = "hedda.gressel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "openai (>=1.76.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [
    { include = "graphrag" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
ignore = ["D100", "D107", "ANN204", "D413", "RET504","D401","INP001","PLE1205","S101"]


